{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 167,
  "lineage": "6c909ec3-8dfa-c17c-c1ac-42f9df4f9608",
  "resources": [
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:internet-gateway/igw-0f2388fca480fdbda",
            "id": "igw-0f2388fca480fdbda",
            "owner_id": "675448213019",
            "tags": {
              "Name": "development - igw"
            },
            "tags_all": {
              "Name": "development - igw"
            },
            "vpc_id": "vpc-00103f6d5055d657e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-0774d112c24925f6d",
            "id": "rtb-0774d112c24925f6d",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2388fca480fdbda",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-route-public-subnets"
            },
            "tags_all": {
              "Name": "development-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-00103f6d5055d657e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03783b6487be57fdc",
            "route_table_id": "rtb-0774d112c24925f6d",
            "subnet_id": "subnet-0974a5d245a84814f"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dbf024e313ab499",
            "route_table_id": "rtb-0774d112c24925f6d",
            "subnet_id": "subnet-01d102e26b51d30e2"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0974a5d245a84814f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0974a5d245a84814f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-1"
            },
            "tags_all": {
              "Name": "development-public-1"
            },
            "vpc_id": "vpc-00103f6d5055d657e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-01d102e26b51d30e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d102e26b51d30e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-2"
            },
            "tags_all": {
              "Name": "development-public-2"
            },
            "vpc_id": "vpc-00103f6d5055d657e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:vpc/vpc-00103f6d5055d657e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-000306ee53188c159",
            "default_route_table_id": "rtb-00353046ef5520636",
            "default_security_group_id": "sg-0aabc8db1a1f93fba",
            "dhcp_options_id": "dopt-0ebbb98fb4d141f48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00103f6d5055d657e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00353046ef5520636",
            "owner_id": "675448213019",
            "tags": {
              "Name": "development - vpc"
            },
            "tags_all": {
              "Name": "development - vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8272f9a3b3986ac",
            "association_id": "eipassoc-02c9cbe38f7673453",
            "domain": "vpc",
            "id": "eipalloc-0b8272f9a3b3986ac",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0367b90f27f8762f8",
            "private_dns": "ip-10-10-1-52.eu-central-1.compute.internal",
            "private_ip": "10.10.1.52",
            "public_dns": "ec2-3-123-249-148.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.249.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-1"
            },
            "tags_all": {
              "Name": "production-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056842e97d5524b17",
            "association_id": "eipassoc-0643ce7c9534fc164",
            "domain": "vpc",
            "id": "eipalloc-056842e97d5524b17",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-027645896a5e5593d",
            "private_dns": "ip-10-10-2-7.eu-central-1.compute.internal",
            "private_ip": "10.10.2.7",
            "public_dns": "ec2-3-123-207-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.207.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-2"
            },
            "tags_all": {
              "Name": "production-nat-gw-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0831b71a0e3c410c4",
            "association_id": "eipassoc-020714fb2acc59d20",
            "domain": "vpc",
            "id": "eipalloc-0831b71a0e3c410c4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0db0c583eb5744e65",
            "private_dns": "ip-10-10-3-139.eu-central-1.compute.internal",
            "private_ip": "10.10.3.139",
            "public_dns": "ec2-3-73-193-252.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.73.193.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-3"
            },
            "tags_all": {
              "Name": "production-nat-gw-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:internet-gateway/igw-0e77ca219c062d1e1",
            "id": "igw-0e77ca219c062d1e1",
            "owner_id": "675448213019",
            "tags": {
              "Name": "production - igw"
            },
            "tags_all": {
              "Name": "production - igw"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8272f9a3b3986ac",
            "connectivity_type": "public",
            "id": "nat-030781a3170ea4db5",
            "network_interface_id": "eni-0367b90f27f8762f8",
            "private_ip": "10.10.1.52",
            "public_ip": "3.123.249.148",
            "subnet_id": "subnet-0db9992e616ef4338",
            "tags": {
              "Name": "production-nat-gw-1"
            },
            "tags_all": {
              "Name": "production-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056842e97d5524b17",
            "connectivity_type": "public",
            "id": "nat-051d520165cc17d09",
            "network_interface_id": "eni-027645896a5e5593d",
            "private_ip": "10.10.2.7",
            "public_ip": "3.123.207.155",
            "subnet_id": "subnet-0c7ff65ec7a879071",
            "tags": {
              "Name": "production-nat-gw-2"
            },
            "tags_all": {
              "Name": "production-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0831b71a0e3c410c4",
            "connectivity_type": "public",
            "id": "nat-000e825ec7ac3a347",
            "network_interface_id": "eni-0db0c583eb5744e65",
            "private_ip": "10.10.3.139",
            "public_ip": "3.73.193.252",
            "subnet_id": "subnet-0d5c9d38e3c250404",
            "tags": {
              "Name": "production-nat-gw-3"
            },
            "tags_all": {
              "Name": "production-nat-gw-3"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-00ee41a9fd3be3f50",
            "id": "rtb-00ee41a9fd3be3f50",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-030781a3170ea4db5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-018191d8cd7420e38",
            "id": "rtb-018191d8cd7420e38",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-051d520165cc17d09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-2"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-0aaeb3b182f61d7ce",
            "id": "rtb-0aaeb3b182f61d7ce",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-000e825ec7ac3a347",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-3"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-06401d88624999318",
            "id": "rtb-06401d88624999318",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e77ca219c062d1e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-public-subnets"
            },
            "tags_all": {
              "Name": "production-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3de3809840ad664",
            "route_table_id": "rtb-00ee41a9fd3be3f50",
            "subnet_id": "subnet-0cc4c3ec73bf44926"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c09c89535163a97d",
            "route_table_id": "rtb-018191d8cd7420e38",
            "subnet_id": "subnet-01cb81b1714d84957"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b7ac1650514ce4",
            "route_table_id": "rtb-0aaeb3b182f61d7ce",
            "subnet_id": "subnet-0e3aab57455ee2791"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031b56f9ca801b61c",
            "route_table_id": "rtb-06401d88624999318",
            "subnet_id": "subnet-0db9992e616ef4338"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023be1def9a476934",
            "route_table_id": "rtb-06401d88624999318",
            "subnet_id": "subnet-0c7ff65ec7a879071"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1df3de5c8ef9dd2",
            "route_table_id": "rtb-06401d88624999318",
            "subnet_id": "subnet-0d5c9d38e3c250404"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0cc4c3ec73bf44926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc4c3ec73bf44926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-1"
            },
            "tags_all": {
              "Name": "production-private-1"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-01cb81b1714d84957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb81b1714d84957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-2"
            },
            "tags_all": {
              "Name": "production-private-2"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0e3aab57455ee2791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.33.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3aab57455ee2791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-3"
            },
            "tags_all": {
              "Name": "production-private-3"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0db9992e616ef4338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9992e616ef4338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-1"
            },
            "tags_all": {
              "Name": "production-public-1"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0c7ff65ec7a879071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7ff65ec7a879071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-2"
            },
            "tags_all": {
              "Name": "production-public-2"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0d5c9d38e3c250404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5c9d38e3c250404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-3"
            },
            "tags_all": {
              "Name": "production-public-3"
            },
            "vpc_id": "vpc-0a0a84744716ba4e5"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:vpc/vpc-0a0a84744716ba4e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c10d181fa3015b87",
            "default_route_table_id": "rtb-0c6507b3727c49dc7",
            "default_security_group_id": "sg-0953bfa82f8c1b40a",
            "dhcp_options_id": "dopt-0ebbb98fb4d141f48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0a84744716ba4e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6507b3727c49dc7",
            "owner_id": "675448213019",
            "tags": {
              "Name": "production - vpc"
            },
            "tags_all": {
              "Name": "production - vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038b3bf1b19cb6ea3",
            "association_id": "eipassoc-021db8567ea972569",
            "domain": "vpc",
            "id": "eipalloc-038b3bf1b19cb6ea3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-052c5947dbb361b5f",
            "private_dns": "ip-10-10-1-55.eu-central-1.compute.internal",
            "private_ip": "10.10.1.55",
            "public_dns": "ec2-3-125-173-191.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.173.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-nat-gw-1"
            },
            "tags_all": {
              "Name": "test-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c0e5fb17e867b2c",
            "association_id": "eipassoc-0d433c6903d9039bf",
            "domain": "vpc",
            "id": "eipalloc-09c0e5fb17e867b2c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0db4993002ce30ad2",
            "private_dns": "ip-10-10-2-79.eu-central-1.compute.internal",
            "private_ip": "10.10.2.79",
            "public_dns": "ec2-18-157-99-60.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.99.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-nat-gw-2"
            },
            "tags_all": {
              "Name": "test-nat-gw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:internet-gateway/igw-0856d497bf41c89e2",
            "id": "igw-0856d497bf41c89e2",
            "owner_id": "675448213019",
            "tags": {
              "Name": "test - igw"
            },
            "tags_all": {
              "Name": "test - igw"
            },
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038b3bf1b19cb6ea3",
            "connectivity_type": "public",
            "id": "nat-0057b5e1fd2e43855",
            "network_interface_id": "eni-052c5947dbb361b5f",
            "private_ip": "10.10.1.55",
            "public_ip": "3.125.173.191",
            "subnet_id": "subnet-0a6410fd9edacd7f6",
            "tags": {
              "Name": "test-nat-gw-1"
            },
            "tags_all": {
              "Name": "test-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c0e5fb17e867b2c",
            "connectivity_type": "public",
            "id": "nat-028d27aafcec004e7",
            "network_interface_id": "eni-0db4993002ce30ad2",
            "private_ip": "10.10.2.79",
            "public_ip": "18.157.99.60",
            "subnet_id": "subnet-0e9cd7b6c59f5c9e0",
            "tags": {
              "Name": "test-nat-gw-2"
            },
            "tags_all": {
              "Name": "test-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-015703bf6e474fa2b",
            "id": "rtb-015703bf6e474fa2b",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0057b5e1fd2e43855",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "test-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-07f096e40128babe0",
            "id": "rtb-07f096e40128babe0",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-028d27aafcec004e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-private-subnet-2"
            },
            "tags_all": {
              "Name": "test-route-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:route-table/rtb-05d32341fd3dedda0",
            "id": "rtb-05d32341fd3dedda0",
            "owner_id": "675448213019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0856d497bf41c89e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-public-subnets"
            },
            "tags_all": {
              "Name": "test-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066e78d5dbb3f922c",
            "route_table_id": "rtb-015703bf6e474fa2b",
            "subnet_id": "subnet-08f9179152f472450"
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_route_table.private_subnets",
            "module.vpc-test.aws_subnet.private_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078434064bbca7187",
            "route_table_id": "rtb-07f096e40128babe0",
            "subnet_id": "subnet-04d6c8a383ab77457"
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_route_table.private_subnets",
            "module.vpc-test.aws_subnet.private_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d25828c88afe56",
            "route_table_id": "rtb-05d32341fd3dedda0",
            "subnet_id": "subnet-0a6410fd9edacd7f6"
          },
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_route_table.public_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047085ca35abd168f",
            "route_table_id": "rtb-05d32341fd3dedda0",
            "subnet_id": "subnet-0e9cd7b6c59f5c9e0"
          },
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_route_table.public_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-08f9179152f472450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f9179152f472450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-1"
            },
            "tags_all": {
              "Name": "test-private-1"
            },
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-04d6c8a383ab77457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d6c8a383ab77457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-2"
            },
            "tags_all": {
              "Name": "test-private-2"
            },
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0a6410fd9edacd7f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6410fd9edacd7f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-1"
            },
            "tags_all": {
              "Name": "test-public-1"
            },
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:subnet/subnet-0e9cd7b6c59f5c9e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9cd7b6c59f5c9e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675448213019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-2"
            },
            "tags_all": {
              "Name": "test-public-2"
            },
            "vpc_id": "vpc-0070d8fe11e69b4d2"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:675448213019:vpc/vpc-0070d8fe11e69b4d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04fc1d255f5ec45f1",
            "default_route_table_id": "rtb-07acd89de83b4c67d",
            "default_security_group_id": "sg-011d6acc5af4b15ae",
            "dhcp_options_id": "dopt-0ebbb98fb4d141f48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0070d8fe11e69b4d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07acd89de83b4c67d",
            "owner_id": "675448213019",
            "tags": {
              "Name": "test - vpc"
            },
            "tags_all": {
              "Name": "test - vpc"
            }
          }
        }
      ]
    }
  ]
}